--- a/templates/Login/index.html
+++ b/templates/Login/index.html
@@ -52,14 +52,14 @@
 
 					<div class="container-login100-form-btn">
 						<button class="login100-form-btn">
-							<a href="file:///home/mq/keikibook/src/templates/wall-page/index.html">
+							<a href="http://localhost:8080/login">
 								Login
 							</a>
 						</button>
 					</div>
 
 					<div class="text-center p-t-136">
-						<a class="txt2" href="file:///home/mq/keikibook/src/templates/sign-up/index.html">
+						<a class="txt2" href="http://localhost:8080/sign-up">
 							Create your Account
 							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
 						</a>
