--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -13,12 +13,14 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1 id="logo"><a href="file:///home/mq/keikibook/src/templates/home/index.html">Keikibook</a></h1>
+					<h1 id="logo">
+						<a href="index.html">Keikibook</a>
+					</h1>
 					<nav id="nav">
 						<ul>
 							<li class="current"><a href="index.html">Welcome</a></li>
-							<li><a href="file:///home/mq/go/src/keikibook/templates/sign-up/index.html" class="button primary">Sign Up</a></li>
-							<li><a href="file:///home/mq/go/src/keikibook/templates/Login/index.html" class="button primary">Login</a></li>
+							<li><a href="http://localhost:8080/sign-up" class="button primary">Sign Up</a></li>
+							<li><a href="http://localhost:8080/login" class="button primary">Login</a></li>
 						</ul>
 					</nav>
 				</header>
