--- a/templates/sign-up/index.html
+++ b/templates/sign-up/index.html
@@ -65,7 +65,7 @@
 							<label class="label-checkbox100" for="ckb1">
 								<span class="txt1">
 									I agree to the
-									<a href="file:///home/mq/keikibook/src/templates/sign-up/index.html" class="txt2 hov1">
+									<a href="http://localhost:8080/sign-up" class="txt2 hov1">
 										Terms of User
 									</a>
 								</span>
@@ -79,13 +79,13 @@
 						<div class="wrap-login100-form-btn">
 							<div class="login100-form-bgbtn"></div>
 							<button class="login100-form-btn">
-								<a href="file:///home/mq/keikibook/src/templates/wall-page/index.html">
+								<a href="http://localhost:8080/{id}">
 								Sign Up
 							</a>
 							</button>
 						</div>
 
-						<a href="file:///home/mq/keikibook/src/templates/Login/index.html">
+						<a href="http://localhost:8080/login">
 							Sign in
 							<i class="fa fa-long-arrow-right m-l-5"></i>
 						</a>
