--- a/templates/sign-up/index.html
+++ b/templates/sign-up/index.html
@@ -24,7 +24,7 @@
 			<div class="login100-more" style="background-image: url('images/bg-01.jpg');"></div>
 
 			<div class="wrap-login100 p-l-50 p-r-50 p-t-72 p-b-50">
-				<form class="login100-form validate-form" method="POST">
+				<form class="login100-form validate-form" method="POST" enctype="multipart/form-data" action="/">
 					<span class="login100-form-title p-b-59">
 						Sign Up
 					</span>
@@ -95,7 +95,6 @@
 		</div>
 	</div>
 
-<!--===============================================================================================-->
 	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
 	<script src="vendor/animsition/js/animsition.min.js"></script>
 	<script src="vendor/bootstrap/js/popper.js"></script>
